--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
         </div>
 
         <!-- End Content -->
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.js"></script>
+        <script src="js/vendor/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/phaseData.js"></script>
         <script src="js/make.js"></script>
         <script src="js/main.js"></script>
+        <script>
+            moment().format();
+        </script>
     </body>
 </html>
